# linear-core

./: .gitignore  ICFP-2024-reviews  ICFP-2025-rebuttal  ICFP-2025-reviews  ICFP-TODO  Makefile  Questions.md  README.md  RELATED_WORK.md  TODO  cabal.project  changes_popl.md  icfp.bak  icfp.lhs  icfp.tex  icfp_submission_2024.tex  lwnovathesis.cls  popl26-accepted-before-rebuttal.tex  popl26.tex  popl_response.md  proof.tex  proposal.tex  references.bib  report.lhs  report.tex
.github/workflows/: haskell-ci.yml
agda/: STLC.agda  STLC.agdai  STLC.agda~
call-notes/: 02-10-2023.txt  05-08-2023.txt  06-08-2023.txt  07-08-2023.txt  10-08-2023.txt  11-05-2023.md  11-08-2023.md  12-08-2023.txt  14-09-2023.txt  15-07-2023.md  16-07-2023.md  17-07-2023.hs  18-07-2023.hs  18-09-2023.md  19-07-2023.hs  19-09-2023.md  20-07-2023.hs  2025-02-11.txt  2025-02-24.txt  21-07-2023.hs  21-09-2023.txt  22-07-2023.hs  23-07-2023.hs  23-08-2023.txt  24-07-2023.hs  25-09-2023.txt  26-07-2023.md  28-07-2023.md  28-08-2023.txt  29-06-2023.md  29-07-2023.md  30-07-2023.txt  31-07-2023.txt  8-2-2025.txt
chapters/: c2.lhs  c3.lhs  c4.lhs  c5.lhs  c6.lhs  c7.lhs  c8.lhs
haskell-symposium/: Makefile  paper.tex
laboratory/: A.hs  CHANGELOG.md  EmptyCase.hs  Files.hs  Lab.hs  LetBound.hs  LetRecs.hs  LetRecs.simpl  MultPoly.hs  UsingPair.hs  Vec.hs  laboratory.cabal
laboratory/algorithms/: CHANGELOG.md  UsageEnv.hs  algorithms.cabal
laboratory/app/: Files.hs  Main.hs
laboratory/join_points_reclet_1/: Makefile  NameCache.dump-simpl  NameCache.hs
laboratory/reuniao/: A.hs  B.hs  X.hs
language/: InferUsageEnvs.tex  OperationalSemantics.tex  Syntax.tex  TypingRules.tex
language-v2/: OperationalSemantics.tex  Syntax.tex  TypingRules.tex  proof.tex
language-v3/: OperationalSemantics.tex  Proofs.hs  Syntax.tex  TypingRules.tex  proof.tex
language-v3/proofs/: LinearSubstitutionLemma.tex
language-v3/proofs/optimizations/: LetFloating.tex
language-v4/: OperationalSemantics.tex  Syntax.tex  SyntaxDirectedSystem.tex  TheoremsAndLemmas.tex  TypingRules.tex  proof.tex
language-v4/proofs/: DeltaLinearLemma.tex  DeltaSubstitutionLemma.tex  LinearSubstitutionLemma.tex  ProgressTheorem.tex  TypePreservationTheorem.tex  UnrestrictedSubstitutionLemma.tex  WHNFConvSoundness.tex
language-v4/proofs/optimizations/: BetaReduction.tex  BinderSwap.tex  CaseOfCase.tex  CaseOfKnownConstructor.tex  EtaConvs.tex  Inlining.tex  LetFloating.tex
language/proofs/: DeltaSubstitutionLemma.tex  LinearSubstitutionLemma.tex  ProgressTheorem.tex  TypePreservationTheorem.tex  UnrestrictedSubstitutionLemma.tex
language/proofs/optimizations/: BetaReduction.tex  CaseOfCase.tex  CaseOfKnownConstructor.tex  Inlining.tex
presentation/defesa/: Makefile  Notas.txt  slides.lhs
presentation/mei-welcome/: Makefile  slides.lhs
presentation/popl26/: .gitignore  Makefile  Notas.txt  slides.lhs
presentation/preparation/: Makefile  ex1.hs  slides.lhs  slides.tex
proofs/: DeltaSubstitutionLemma.tex  ProgressTheorem.tex
prototype/: CHANGELOG.md  README.md  REPRODUCING.md  TODO  cabal.project  cabal.project.local  core-plugin-results-2.tex  core-plugin-results.tex  debug_examples.hs  linear-core-prototype.cabal  output
prototype/app/: F.hs  Main.hs  Syntax.hs  Typechecker.hs
prototype/ghc-bugs/: Bug.hs
prototype/src/Linear/: Core.hs
prototype/src/Linear/Core/: Check.hs  Infer.hs  Monad.hs  Multiplicities.hs  Parser.hs  Plugin.hs  Syntax.hs
prototype/src/Linear/Core/Translate/: Check.hs  Infer.hs  Parser.hs  Syntax.hs
prototype/test/: Test.hs
prototype/test/Translate/: Test.hs
techreport/: references.bib
