cabal-version:      3.4
name:               linear-core-prototype
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rodrigo Mesquita
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common common
    ghc-options: -Wall
    other-extensions: UnicodeSyntax
    default-language: GHC2021

library
    import:           common
    exposed-modules:  Linear.Core.Syntax, Linear.Core.Check
    build-depends:    base >=4.17.1.0, containers, recursion-schemes,
                      bytestring, mtl, text, vector,
                      base-unicode-symbols, containers-unicode-symbols
    hs-source-dirs:   src

executable linear-core-prototype
    import:           common
    main-is:          Main.hs
    build-depends:    base, linear-core-prototype, containers, recursion-schemes, bytestring, mtl, text, vector
    hs-source-dirs:   app

test-suite linear-core-test
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  build-depends: base, linear-core-prototype, tasty, tasty-hunit, containers, recursion-schemes, bytestring, mtl, text, vector


